# opengl-model-viewer

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: Sanitizers.cmake  StandardProjectSettings.cmake
dependencies/: CMakeLists.txt
dependencies/cppcodec/: CMakeLists.txt
dependencies/glad/: CMakeLists.txt  glad.c  glad.h
dependencies/glm/: CMakeLists.txt  glm_nowarn.h
dependencies/imgui/: CMakeLists.txt
dependencies/stb_image/: CMakeLists.txt
model-viewer/: CMakeLists.txt  constants.h  main.cc
model-viewer/context/: window.cc  window.h
model-viewer/control/: fly_through_camera.cc  fly_through_camera.h  icamera.h  orbit_camera.cc  orbit_camera.h
model-viewer/panels/: bloom_panel.cc  bloom_panel.h  gooch_panel.cc  gooch_panel.h  ibl_panel.cc  ibl_panel.h  ipanel.h  phong_panel.cc  phong_panel.h  scene_panel.cc  scene_panel.h  ssao_panel.cc  ssao_panel.h
model-viewer/renderers/: irenderer.h
model-viewer/renderers/gooch/: gooch_pass.cc  gooch_pass.h  gooch_renderer.cc  gooch_renderer.h
model-viewer/renderers/pbr/: bloom_pass.cc  bloom_pass.h  blur_pass.cc  blur_pass.h  deferred_debug_pass.cc  deferred_debug_pass.h  deferred_pass.cc  deferred_pass.h  ibl_baking.cc  ibl_baking.h  pbr_pass.cc  pbr_pass.h  pbr_renderer.cc  pbr_renderer.h  ssao_pass.cc  ssao_pass.h
model-viewer/renderers/phong/: phong_pass.cc  phong_pass.h  phong_renderer.cc  phong_renderer.h
model-viewer/settings/: bloom_settings.h  camera_settings.h  gooch_settings.h  ibl_settings.h  phong_settings.h  scene_settings.h  ssao_settings.h
model-viewer/wrapper/: cube.cc  cube.h  framebuffer.cc  framebuffer.h  gltf_file_resource.cc  gltf_file_resource.h  handle.h  index_buffer.h  material.h  mesh.h  node.h  primitive.cc  primitive.h  quad.cc  quad.h  render_buffer.cc  render_buffer.h  sampler.cc  sampler.h  scene.h  shader.cc  shader.h  texture.cc  texture.h  vertex_array.cc  vertex_array.h  vertex_buffer.cc  vertex_buffer.h  wrapper_utils.cc  wrapper_utils.h
resources/environments/: christmas_photo_studio_06_4k.hdr  hikers_cave_2k.hdr  misty_pines_2k.hdr
resources/models/: box.gltf  marble_bust_01_1k.glb  sponza.glb
resources/shaders/bloom/: bloom.frag
resources/shaders/blur/: blur.frag  blur_mean.frag
resources/shaders/gooch/: deferred_gooch.frag  outline.frag  outline.vert  shading_gooch.frag  shading_gooch.vert
resources/shaders/pbr/: deferred.frag  deferred.vert  deferred_debug.frag  deferred_debug.geom  deferred_debug.vert  pbr.frag  skybox.frag
resources/shaders/pbr/ibl/: bake_brdf.frag  bake_brdf.vert  convolution.frag  cubemap.vert  equirectangular.frag  prefiltering.frag
resources/shaders/phong/: phong.frag  phong_skybox.frag  phong_skybox.vert
resources/shaders/ssao/: ssao.frag
